.kubernetes/01-agala-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agala-staging
  name: agala-staging
  namespace: default
spec:
  selector:
    matchLabels:
      app: agala-staging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: agala-staging
    spec:
      containers:
        - command:
            - /bin/bash
            - -c
          args:
            - composer install && php artisan migrate && php artisan db:seed && php-fpm -y /usr/local/etc/php-fpm.conf -R
          image: neiellcare71/composer:latest
          imagePullPolicy: IfNotPresent
          name: agala-staging
          ports:
            - containerPort: 80
              name: agala-staging
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www
              name: app
            - mountPath: /root/.ssh
              name: id-rsa
      hostname: agala-staging
      restartPolicy: Always
      volumes:
        - emptyDir: {}
          name: app
        - name: id-rsa
          secret:
            defaultMode: 384
            items:
              - key: id_rsa
                path: id_rsa
              - key: known_hosts
                path: known_hosts
            secretName: agala-rsa
---
apiVersion: v1
kind: Service
metadata:
  name: agala-staging
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: agala-staging
  ports:
    - name: agala-staging
      protocol: TCP
      port: 80
      targetPort: 80
